2004-05-04 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b96

	* Fix: Warning in when recovering password with adding isset to userData.inc.
		Thanks to floridave.

2004-05-04  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b95

	* Change: Allow doCommand("delete-comment") to use the $return
	  var

	* Change: Extra debug output when using dismissAndLoad() to
	  display $url for troubleshooting.

	* Change: Correct "view_album" to "view_photo" in commentdraw.inc

2004-05-04 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b94

	* Fix: Adjust util.php due to renamed config option.
	
	* Change: removed unused/debug code.

2004-05-04 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b93

	* New: Added config option for maximum length of comments.

	* Change: Rewrite of navigator.inc and navphoto.inc

	* Fix: Images for Voting Result Graph were not found when embedded.

	* Fix: Removed Bigger border around breadcrumb when not on search page. (Introduced in b81)

	* Changes in setup/frame_test.php:
	  - Corrected use of doctype();
	  - Use of init.php
	  - Use of constant GALLERY_BASE
	  - Use of $HTTP_GET_VARS, because $_GET is only available for PHP >=4.1.0
	  - Use of common_header()

	* Change: Created function drawCommentAddForm which is used inside and in popup 
		  for unified Layout.

	* Change: Moved substitution for array_search when PHP <4.0.5 from
		  view_photo.php into util.php so we can use it everywhere.

2004-05-04  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b92

	* Change: Don't use makeGalleryHeaderUrl in do_command "logout"
	  if it's a full url.  (Checking for "^http")

	* Change: Remove extraneous htmlspecialchars() from inline_imagewrap

	* Change: Use doCommand() and add "full" param to popup() in 
	  commentbox.inc and commentdraw.inc to prevent a refresh from
	  occuring, which can cause an issue using the new inline comments.
	  (Post a comment, immediately delete it,  it would attempt to re-post
	  the comment - fixed)
